# tep

./: .gitignore  .tep_ignore  .tepignore  CHANGELOG.md  CLI_DESIGN.md  CONCEPT.md  Cargo.toml  DATA_MODEL.md  INSTALL.md  LICENSE-APACHE  LICENSE-MIT  Makefile  OPEN_QUESTIONS.md  README.md  ROADMAP.md  USE_CASES.md
.github/workflows/: rust.yml
doc/: ARCHITECTURE_NOTES.md  CORE_MODULES.md  ENTITY_CATALOG.md  FEATURES.md  IMPLEMENTATION_BACKLOG.md  PLANNING.md  PRODUCT_VISION.md  README.md  TEP_SKILL_NOTES.md  main-tech-seed.md
doc/skills/tep-workflow/: SKILL.md
playground/: context.md  notes.md  qa-1.md  qa-2.md
skills/tep-context/: SKILL.md
skills/tep-context/references/: tep-patterns.md
spec/: ANCHOR_FLOW_SPEC.md  ENTITY_COMMANDS_SPEC.md  ENTITY_CONTEXT_SPEC.md  ENTITY_LINKS_SPEC.md  MARKER_AND_ANCHOR_SPEC.md  README.md  TEP_2_TAG_SYNTAX_SPEC.md  V1_OVERVIEW.md  WORKSPACE_AND_IGNORE_SPEC.md
src/: anchor.rs  cli.rs  db.rs  dto.rs  entity.rs  errors.rs  filter.rs  main.rs  output.rs  repository.rs  service.rs  tep_tag.rs  utils.rs
src/commands/: anchor.rs  auto.rs  entity.rs  health.rs  init.rs  mod.rs  reset.rs  support.rs
src/filter/: tep_ignore_filter.rs
src/output/: anchor_format.rs  anchor_output.rs  entity_output.rs  render.rs  styles.rs  workspace_output.rs
src/repository/: anchor_entity_repository.rs  anchor_repository.rs  entity_repository.rs
src/service/: anchor_service.rs  entity_context.rs  entity_link_context.rs  entity_service.rs  health_service.rs  workspace_parse_service.rs  workspace_service.rs
src/utils/: parse.rs  path.rs  time.rs  workspace_scanner.rs
tests/: anchor_cmd.rs  auto_cmd.rs  auto_ordering.rs  cli_help.rs  entity_cmd.rs  init_cmd.rs  regression_cmd.rs
