[package]
name = "tep"
version = "0.1.0"
edition = "2024"
description = "Text entity pointers — connect concepts to locations in your codebase and docs"
license = "MIT OR Apache-2.0"
rust-version = "1.85"
repository = "https://github.com/MPopovych/tep"
homepage = "https://github.com/MPopovych/tep"
readme = "README.md"
keywords = ["cli", "graph", "context", "documentation", "code-navigation"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    ".github/",
    ".tep/",
    "doc/",
    "spec/",
    "skills/",
    "tests/",
    "bin/",
    "*.md",
    "!README.md",
]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
ignore = "0.4"
rusqlite = { version = "0.39", features = ["bundled"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
predicates = "3"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
