[package]
name = "tep"
version = "1.0.0"
edition = "2024"
description = "Text entity pointers — connect concepts to locations in your codebase and docs"
license = "Unlicense"
rust-version = "1.85"
repository = "https://github.com/MPopovych/tep"
homepage = "https://github.com/MPopovych/tep"
readme = "README.md"
keywords = ["cli", "graph", "context", "documentation", "code-navigation"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    ".github/",
    ".tep/",
    "doc/",
    "spec/",
    "skills/",
    "tests/",
    "bin/",
    "*.md",
    "!README.md",
]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive", "env"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ignore = "0.4.25"
rusqlite = { version = "0.39.0", features = ["bundled"] }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["fmt", "env-filter"] }

[dev-dependencies]
assert_cmd = "2.2.0"
assert_fs = "1.1.3"
predicates = "3.1.4"
tempfile = "3.27.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
